# Adaptive-Surveys

./: .gitignore  README.md  app.py  config.py  init_db.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  constants.py  models.py  routes.py
app/services/: analysis_service.py  question_generator.py  response_processor.py
app/templates/: base.html  create_survey.html  dashboard.html  index.html  insights.html  login.html  register.html  survey_complete.html  take_survey.html
instance/: app.db
migrations/versions/: 0f84a47895ec_add_insight_type_tags_and_supporting_.py  f8d6133aea3b_add_usefulness_tracking_to_insights.py  f93cd8d214c1_add_question_type_column_to_question_.py
static/css/: main.css
static/js/: main.js
